ch09/ch09-start/iac-macro-usage/tests/fails/bucket_and_no_lambda_name.stderr
error: lambda needs a name
 --> tests/fails/bucket_and_no_lambda_name.rs:5:21
  |
5 |       bucket unique lambda
  |                     ^^^^^^
